load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_atlassian_bazel_tools//golangcilint:def.bzl", "golangcilint")

# gazelle:prefix github.com/attilaolah/math/go
gazelle(name = "gazelle")

golangcilint(
    name = "golangci",
    config = ".golangci.yml",
    paths = [
        # keep sorted
        "./knot",
        "./poly",
    ],
    prefix = "github.com/attilaolah/math/go",
)