load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "arc.go",
        "coding.go",
        "cross.go",
        "knot.go",
        "reidemeister_moves.go",
        "well_known.go",
    ],
    importpath = "github.com/attilaolah/math/knot",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "coding_test.go",
        "knot_test.go",
    ],
    embed = [":go_default_library"],
)
