load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "int64_m.go",
        "int64_p.go",
        "int64_t.go",
    ],
    importpath = "github.com/attilaolah/math/poly",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "int64_m_test.go",
        "int64_p_test.go",
        "int64_t_test.go",
    ],
    embed = [":go_default_library"],
)
