load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

go_library(
    name = "go_default_library",
    srcs = [
        "int64_m.go",
        "int64_p.go",
        "int64_t.go",
    ],
    importpath = "github.com/attilaolah/math/poly",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "int64_m_test.go",
        "int64_p_test.go",
        "int64_t_test.go",
    ],
    embed = [":go_default_library"],
)

py_library(
    name = "poly",
    srcs = ["__init__.py"],
    deps = [":int_t"],
)

py_library(
    name = "int_p",
    srcs = ["int_p.py"],
    deps = [":int_t"],
)

py_test(
    name = "int_p_test",
    srcs = ["int_p_test.py"],
    python_version = "PY3",
    deps = [":int_p"],
)

py_library(
    name = "int_t",
    srcs = ["int_t.py"],
    srcs_version = "PY3",
)

py_test(
    name = "int_t_test",
    srcs = ["int_t_test.py"],
    python_version = "PY3",
    deps = [":int_t"],
)
